--- a/jagadguru/src/index.css
+++ b/jagadguru/src/index.css
@@ -1,10 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Laila:wght@300;400;500;600;700&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import url('https://fonts.googleapis.com/css2?family=Laila:wght@300;400;500;600;700&display=swap');
 
-body {
-  background-color: rgb(255, 255, 189);
+body{
+  background-color: bisque;
 }
 
 .laila-light {
